<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_xsmall"
    android:layout_marginRight="@dimen/margin_xsmall"
    android:layout_marginTop="@dimen/margin_xsmall"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_size2"
            android:contentDescription="@string/article_image"
            android:scaleType="centerCrop"
            android:src="@drawable/no" />

        <TextView
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/thumbnail"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="@dimen/text_large"
            tools:text="@string/sample_title" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_xlarge"
            android:layout_alignEnd="@+id/news_title"
            android:layout_below="@+id/news_title"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/read_more" />

        <Button
            android:id="@+id/delete"
            android:layout_width="@dimen/margin_large"
            android:layout_height="@dimen/margin_large"
            android:layout_alignEnd="@+id/news_title"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:background="@drawable/cross"
            android:contentDescription="@string/delete" />

    </RelativeLayout>
</android.support.v7.widget.CardView>