<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_size2"
                android:fitsSystemWindows="true"
                app:expandedTitleTextAppearance="@android:color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">


                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_size"
                    android:contentDescription="@string/article_image"
                    android:scaleType="centerCrop" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                app:cardElevation="@dimen/margin_xsmall"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/root_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_medium"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">


                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small_medium"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_xlarge"
                        android:textStyle="bold"
                        tools:text="@string/sample_title" />

                    <TextView
                        android:id="@+id/source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_medium"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_xsmall"
                        tools:text="@string/sample_author" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/overview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_xsmall"
                            android:text="@string/overview"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/text_medium"
                            android:textStyle="bold" />


                        <ImageButton
                            android:id="@+id/share_button"
                            android:layout_width="@dimen/margin_xlarge"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:background="@null"
                            android:contentDescription="@string/share"
                            android:src="@drawable/ic_share" />


                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_small"
                        tools:text="@string/sample_overview" />


                    <Button
                        android:id="@+id/complete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:background="@color/colorPrimary"
                        android:padding="@dimen/margin_small_medium"
                        android:text="@string/btn_text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin_small"
                        android:background="@android:color/darker_gray" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/heart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:clickable="true"
            android:contentDescription="@string/favorites"
            android:focusable="true"
            android:src="@drawable/ic_like_white"
            app:backgroundTint="@color/colorAccent"
            app:layout_anchor="@id/appbar_detail"
            app:layout_anchorGravity="bottom|right|end" />

    </android.support.design.widget.CoordinatorLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id"></com.google.android.gms.ads.AdView>
</RelativeLayout>
